# jees

./: README.md
Notifikaattori_viikkoteht5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Viikkoteht3/: main.cpp
untitled/: main.cpp
viikkoteht1/: main.cpp
